<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".SignUpActivity">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="34dp"
            android:src="@drawable/ic_back" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:src="@drawable/ic_login" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/urbanist_extrabold"
            android:gravity="center"
            android:text="@string/sign_in_title"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="33dp"
            android:background="@drawable/edit_bg"
            android:drawableStart="@drawable/ic_message"
            android:drawablePadding="21dp"
            android:hint="@string/sign_up_email"

            android:padding="20dp"
            android:textColor="?attr/colorOnSecondary" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:hint="@string/sign_up_pass"
            android:textColorHint="@color/edit_color"

            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:padding="20dp"
                android:drawablePadding="20dp"
                android:drawableStart="@drawable/ic_lock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/edit_bg"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="40dp"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/btn_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            style="@style/Widget.Material3.Button.TextButton"
            android:text="@string/sign_in_forgot" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"

            >

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="0dp"
                android:layout_height="0.5dp"

                android:layout_marginTop="10dp"
                android:layout_weight="0.7" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:fontFamily="@font/urbanist"
                android:gravity="center"
                android:text="@string/or_with"

                android:textStyle="bold" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="0.7" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_marginStart="50dp"
                android:backgroundTint="@color/white"

                app:cardCornerRadius="16dp"
                app:strokeColor="@color/gray_divider"
                app:strokeWidth="0.9dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="30dp"
                    android:src="@drawable/ic_facebook" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="100dp"
                android:layout_height="88dp"
                android:layout_marginHorizontal="20dp"

                android:backgroundTint="@color/white"
                app:cardCornerRadius="16dp"
                app:strokeColor="@color/gray_divider"
                app:strokeWidth="0.9dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="30dp"
                    android:src="@drawable/ic_google" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="16dp"
                app:strokeColor="@color/gray_divider"
                app:strokeWidth="0.9dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="30dp"
                    android:src="@drawable/ic_apple" />

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/urbanist"
                android:gravity="end"
                android:text="@string/sign_in_dont"
                android:textColor="@color/gray_divider" />

            <TextView
                android:id="@+id/sign"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="0.6"
                android:fontFamily="@font/urbanist"
                android:text="@string/sign_up"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>




</ScrollView>
