<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF"
        android:orientation="vertical"
        tools:context=".SignActivity">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_back" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_sign" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/urbanist"
            android:text="@string/sign_title"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="48sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="9dp"
            app:strokeColor="#EEEEEE"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:fontFamily="@font/urbanist"
                    android:gravity="center"
                    android:text="@string/sign_facebook"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_facebook"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="9dp"
            app:strokeColor="#EEEEEE"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:fontFamily="@font/urbanist"
                    android:gravity="center"
                    android:text="@string/sign_google"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_google"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="9dp"
            app:strokeColor="#EEEEEE"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/apple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:fontFamily="@font/urbanist"
                    android:gravity="center"
                    android:text="@string/sign_apple"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_apple"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"

            >

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:layout_marginHorizontal="12dp"
                android:layout_weight="0.15"
                android:fontFamily="@font/urbanist"
                android:gravity="center"
                android:text="@string/or"

                android:textStyle="bold" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1" />


        </LinearLayout>

        <Button
            android:id="@+id/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:padding="18dp"
            android:text="@string/sign_button" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/urbanist"
                android:gravity="end"
                android:text="@string/sign_dont"
                android:textColor="@color/gray_divider" />

            <TextView
                android:id="@+id/sign"
                android:padding="15dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="0.6"
                android:fontFamily="@font/urbanist"
                android:text="@string/sign_up"
                android:textColor="?attr/colorPrimary"
                android:textStyle="bold" />


        </LinearLayout>


    </LinearLayout>
</ScrollView>
